--- a/Project/Storybord/Base.lproj/Main.storyboard
+++ b/Project/Storybord/Base.lproj/Main.storyboard
@@ -101,7 +101,6 @@
                                 <size key="customSize" width="110" height="110"/>
                                 <connections>
                                     <outlet property="labelKana" destination="MaT-TL-2SP" id="ucl-WJ-ona"/>
-                                    <segue destination="l8d-ht-EgW" kind="show" id="Azv-AS-Kf0"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -346,13 +345,13 @@
         <!--Detail Kana View Controller-->
         <scene sceneID="v3z-yE-6rF">
             <objects>
-                <viewController id="l8d-ht-EgW" customClass="DetailKanaViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailKanaViewController" id="l8d-ht-EgW" customClass="DetailKanaViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qIK-i9-gj0">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H3G-V1-QY9">
-                                <rect key="frame" x="87" y="180" width="240" height="240"/>
+                                <rect key="frame" x="87" y="158" width="240" height="240"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="あ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bUq-p2-AoA" userLabel="Label">
                                         <rect key="frame" x="8" y="8" width="224" height="224"/>
@@ -374,7 +373,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Ej-Fp-daP">
-                                <rect key="frame" x="95" y="436" width="224" height="128"/>
+                                <rect key="frame" x="95" y="414" width="224" height="128"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="a" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42c-iH-Fa7">
                                         <rect key="frame" x="97" y="29" width="30" height="71"/>
@@ -396,7 +395,7 @@
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <state key="normal" title="Kana -1"/>
                                 <connections>
-                                    <action selector="previousButtom:" destination="l8d-ht-EgW" eventType="touchUpInside" id="cPY-2x-gNC"/>
+                                    <action selector="previousButtom:" destination="l8d-ht-EgW" eventType="touchUpInside" id="0fN-6j-NPY"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYJ-rk-bcl">
@@ -405,7 +404,7 @@
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <state key="normal" title="Kana +1"/>
                                 <connections>
-                                    <action selector="nextButtom:" destination="l8d-ht-EgW" eventType="touchUpInside" id="Bg2-FB-mv4"/>
+                                    <action selector="nextButtom:" destination="l8d-ht-EgW" eventType="touchUpInside" id="zrS-E4-2Lk"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GGc-gK-8Qe">
@@ -414,7 +413,7 @@
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <state key="normal" image="speaker.3.fill" catalog="system"/>
                                 <connections>
-                                    <action selector="spekerButtom:" destination="l8d-ht-EgW" eventType="touchUpInside" id="2br-xm-OYD"/>
+                                    <action selector="spekerButtom:" destination="l8d-ht-EgW" eventType="touchUpInside" id="FCH-AN-uvn"/>
                                 </connections>
                             </button>
                         </subviews>
